# miktex

./: CMakeLists.txt
Admin/ConfigFiles/: CMakeLists.txt  formats.ini.in  ptex.ini.in
Admin/TPM/windows-x64/: miktex-ptex-bin-x64.tpm.in
Admin/TPM/windows-x86/: miktex-ptex-bin.tpm.in
BuildUtilities/c4p/: main.cpp
Libraries/3rd/ptexenc/source/: ptexenc.c
Libraries/3rd/ptexenc/source/ptexenc/: ptexenc.h
Libraries/MiKTeX/Core/include/miktex/Core/: Paths.h.in
Libraries/MiKTeX/TeXAndFriends/include/miktex/TeXAndFriends/: config.h.cmake
Libraries/MiKTeX/Web2CEmulation/include/miktex/W2C/: Emulation.h
Programs/MiKTeX/initexmf/: initexmf.cpp
Programs/MiKTeX/makex/: makefmt.cpp
Programs/MiKTeX/texify/: mcd.cpp
Programs/TeXAndFriends/ptex/: CMakeLists.txt  libkanji.cmake  pbibtex-miktex-adapter.ch  pbibtex-miktex.ch  pbibtex-miktex.h  pbibtex.cmake  pdvitype-miktex-adapter.ch  pdvitype-miktex.ch  pdvitype-miktex.h  pdvitype.cmake  pdvitype.rc.in  ppltotf-miktex.ch  ppltotf.cmake  ppltotf.rc.in  ptftopl-miktex-adapter.ch  ptftopl-miktex.h  ptftopl-version.h  ptftopl.cmake
Programs/TeXAndFriends/ptex/pbibtex/: CMakeLists.txt  dyn.sed  pbibtex-miktex-adapter.ch  pbibtex-miktex.ch  pbibtex-miktex.h  pbibtex.rc.in
Programs/TeXAndFriends/ptex/ppltotf/: ppltotf-miktex-adapter.ch  ppltotf-miktex.h  ppltotf-version.h
Programs/TeXAndFriends/ptex/ptex/: CMakeLists.txt  ptex-miktex-adapter.ch  ptex-miktex.ch  ptex-miktex.h  ptex-version.h
Programs/TeXAndFriends/ptex/ptftopl/: ptftopl-miktex-adapter.ch  ptftopl-miktex.ch  ptftopl-miktex.h
Programs/TeXAndFriends/ptex/source/: kanji.h  kanji_dump.c
Programs/TeXAndFriends/synctex/source/: synctex-ptex.h
Programs/TeXAndFriends/texjp/eptex/: CMakeLists.txt  miktex-eptex.ch  miktex-eptex.cpp  miktex-eptex.h
Programs/TeXAndFriends/texjp/eptex/miktex/: eptex.h
Programs/TeXAndFriends/texjp/euptex/: miktex-euptex.h
Programs/TeXAndFriends/texjp/ptex/pbibtex/: CMakeLists.txt  miktex-pbibtex.h  pbibtex-miktex-adapter.ch  pbibtex-miktex.ch  webify.cmake
Programs/TeXAndFriends/texjp/ptex/pdvitype/: CMakeLists.txt  miktex-pdvitype.ch  miktex-pdvitype.h  pdvitype-miktex-adapter.ch  pdvitype-miktex.h  pdvitype-version.h  webify.cmake
Programs/TeXAndFriends/texjp/ptex/ppltotf/: CMakeLists.txt  miktex-ppltotf.h  ppltotf-miktex-adapter.ch  webify.cmake
Programs/TeXAndFriends/texjp/ptex/ptex/: CMakeLists.txt  miktex-first.h  miktex-ptex.h  ptex-miktex-adapter.ch  ptex-miktex.ch  ptex-miktex.cpp  ptex.rc.in  webify.cmake
Programs/TeXAndFriends/texjp/ptex/ptftopl/: CMakeLists.txt  miktex-ptftopl.h  ptftopl.rc.in  webify.cmake
Programs/TeXAndFriends/texjp/ptex/source/: kanji.h  ptexextra.c
Programs/TeXAndFriends/texjp/uptex/: CMakeLists.txt
Programs/TeXAndFriends/texjp/uptex/miktex/: uptex.h
Programs/TeXAndFriends/texjp/uptex/upbibtex/: miktex-upbibtex.h
Programs/TeXAndFriends/texjp/uptex/updvitype/: miktex-updvitype.h
Programs/TeXAndFriends/texjp/uptex/uppltotf/: miktex-uppltotf.h
Programs/TeXAndFriends/texjp/uptex/uptex/: CMakeLists.txt  miktex-uptex.ch  miktex-uptex.h  miktex-uptex.rc.in  webify.cmake
Programs/TeXAndFriends/texjp/uptex/uptftopl/: miktex-uptftopl.h
cmake/modules/: SourcePaths.cmake
